--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-dev_dependencies:
-  flutter_test:
+dependencies:
+  flutter:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  path_provider: ^2.0.9
 
 flutter:
   uses-material-design: true
