--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  path_provider: ^2.0.9
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^2.0.9
 
 flutter:
   uses-material-design: true
